<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_bottom"
    app:cardCornerRadius="@dimen/cardCornerRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="@dimen/card_img"
            android:layout_height="@dimen/card_img"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/rex"
            android:transitionName="@string/transicion_foto"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibCalificacionCV"
                    android:layout_width="@dimen/boton_tam"
                    android:layout_height="@dimen/boton_tam"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dog_bone_white"
                    android:layout_margin="0dp"
                    android:background="@color/white">
                </ImageButton>

                <TextView
                    android:id="@+id/tvNombreCV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/pnombre"
                    android:textSize="@dimen/textocadviewSize"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginStart="@dimen/margin" />

                <TextView
                    android:id="@+id/tvImagenIdCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCalificacionCV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/pcal"
                    android:textSize="@dimen/textocadviewSize"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginRight="@dimen/margin" />

                <ImageView
                    android:layout_width="@dimen/boton_tam"
                    android:layout_height="@dimen/boton_tam"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dog_bone_yellow">
                </ImageView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>